fixed the distorted button in the FAQ

--- a/components/reusable-components/expand-button/ExpandCollapseButton.module.scss
+++ b/components/reusable-components/expand-button/ExpandCollapseButton.module.scss
@@ -1,6 +1,6 @@
 .buttonMorph {
   background-color: #f7f7ff;
-  width: 2rem;
+  min-width: 2rem;
   height: 2rem;
   border-radius: 0.5rem;
   position: relative;
